<resources>
    <string name="app_name">通讯录</string>
    <string name="input_car_num">请输入车牌号</string>
    <string name="txt_fix_record">维修记录</string>
    <string name="txt_purchase_record">进货记录</string>
    <string name="txt_add_worker">新增员工</string>
    <string name="title_add_worker">新增员工</string>
    <string name="title_worker_manage">员工管理</string>
    <string name="confirm">确认</string>
    <string name="input_worker_name">请输入员工姓名</string>
    <string name="input_worker_birthday">请输入员工出生日期</string>
    <string name="input_worker_phone">请输入员工手机号</string>
    <string name="input_worker_address">请输入员工户籍地址</string>
    <string name="user_img">员工头像</string>
    <string name="please_take_avatar">请对员工拍照</string>
    <string name="notify_add_worker_success">新增员工成功</string>
    <string name="notify_add_worker_error">新增员工失败</string>
    <string name="last_step">上一步</string>
    <string name="next_step">下一步</string>
    <string name="car_info">车辆信息</string>
    <string name="car_owner_info">车主信息</string>
    <string name="department_info">单位信息</string>
    <string name="voice_tips">长按输入</string>
    <string name="voice_cancel">清空</string>
    <string name="voice_please_say">请说话…</string>
    <string name="repair_content">维修内容</string>
    <string name="security_input_voice">语音输入</string>
    <string name="hint_input_500">限输入500字符</string>
    <string name="security_edu_content">维修内容</string>
    <string name="repair_part">维修项目</string>
    <string name="repair_person">维修负责人</string>
    <string name="work_time">维修工时</string>
    <string name="work_time_fee">工时计费</string>
    <string name="repair_parts_list">配件清单</string>
    <string name="cash_unit">(元)</string>
    <string name="part_price">%1$s元</string>
    <string name="part_price_brackets">(%1$s元)</string>
    <string name="part_count">x\u0020%1$s</string>
    <string name="cancel">取消</string>
    <string name="add">新增</string>
    <string name="new_add_car_part">新增配件</string>
    <string name="car_part_name">配件名称</string>
    <string name="car_part_price">单\u0020价(元)</string>
    <string name="car_part_count">数量</string>
    <string name="notify_input_part_name">请输入项目类容</string>
    <string name="notify_input_part_price">请输入工时价格</string>
    <string name="notify_input_part_count">请输入工时</string>

    <string name="notify_input_accessory_name">请输入配件名称</string>
    <string name="notify_input_accessory_price">请输入配件价格</string>
    <string name="notify_input_accessory_count">请输入配件数量</string>

    <string name="notify_empty_car_id">请输入车牌号码</string>
    <string name="notify_empty_chassis_num">请输入底盘号</string>
    <string name="notify_empty_engine_num">请输入发动机号</string>
    <string name="notify_empty_driver_name">请输入车主姓名</string>
    <string name="notify_empty_driver_idcard">请输入车主身份证</string>
    <string name="notify_empty_car_id_error">请输入正确的车牌号码</string>
    <string name="notify_empty_driver_phone">请输入车主手机号码</string>
    <string name="notify_empty_maintenance_content">请输入维修内容</string>
    <string name="notify_empty_work_time">请输入工时</string>
    <string name="notify_empty_work_price">请输入工时计费</string>
    <string name="notify_empty_duty_person">请选择维修负责人</string>
    <string name="repair_car">维修车辆</string>
    <string name="car_card_content">车牌号码:\u3000%1$s</string>
    <string name="car_driver_name_content">车主姓名:\u3000%1$s</string>
    <string name="car_driver_phone_content">车主电话:\u3000%1$s</string>
    <string name="car_repair_order_id">维修单号:\u3000%1$s</string>
    <string name="car_accept_time">进厂日期:\u3000%1$s</string>
    <string name="repair_detail">维修明细</string>
    <string name="car_duty_person_content">维修人员:\u3000%1$s</string>
    <string name="car_repair_mileage">维修里程:\u3000%1$s</string>
    <string name="car_repair_time_content">维修工时:\u3000%1$s</string>
    <string name="car_repair_fee_content">工时费用:\u3000%1$s</string>
    <string name="total_fee">总金额</string>
    <string name="title_repair_record">维修记录</string>
    <string name="car_owner_name">车主姓名:\u3000%1$s</string>
    <string name="repair_con">车主地址:\u3000</string>
    <string name="car_owner_phone">车主电话:\u3000%1$s</string>
    <string name="title_repair_detail">维修详情</string>
    <string name="title_repair_part">维修项目</string>
    <string name="title_new_part">新增项目</string>
    <string name="repair_mileage">维修里程</string>
    <string name="repair_mileage_unit">KM</string>
    <string name="title_repair_time">工时</string>
    <string name="notify_add_part">你尚未添加维修项目</string>
    <string name="repair_accessory">维修配件</string>
    <string name="empty_data">暂无数据</string>
    <string name="title_repair_car">车辆记录</string>
    <string name="delivery_car">交车</string>
    <string name="edit">编辑</string>
    <string name="btn_repair">维修</string>
    <string name="title_driver_info">客户关系</string>
    <string name="repair_state">维修状态</string>
    <string name="repair_order_id">维修单号:\u3000%1$s</string>
    <string name="car_card_type">车\u3000\u3000型:\u3000%1$s</string>
    <string name="car_card_frame_num">车\u0020\u0020\u0020架\u0020\u0020号:\u3000%1$s</string>
    <string name="car_card_engine_num">发动机号:\u3000%1$s</string>
    <string name="state_wait_repair">待维修</string>
    <string name="state_repairing">维修中</string>
    <string name="state_delivery">已交车</string>
    <string name="car_delivery_time">交车日期:\u3000%1$s</string>
    <string name="unknown_call_log_name">未知号码</string>
    <string name="unknown_contact_icon">"?"</string>
    <string name="unknown_name">"(无姓名)"</string>

</resources>
